kubernetes/apps/nextcloud/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drive.tmf-solutions.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
  tls: {}
